<resources>
    <string name="app_name">NewsReporter</string>

    <!--Sign In and Sign Up-->
    <string name="app_title">| NEWS REPORTER |</string>
    <string name="signup_reqired_string">Don\'t have an account?</string>
    <string name="sigin_required_string">Already have an account?</string>
    <string name="signup_required_link">SignUp</string>
    <string name="signin_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Pasword</string>
    <string name="display_name_hint">Display Name</string>

    <string name="post_button">Post</string>
    <string name="new_post_caption_hint">Write a caption</string>

    <string name="action_refresh">Refresh</string>
    <string name="title_activity_feed">FeedActivity</string>

    <string name="new_post">Create New Post</string>
    <string name="user_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="user_logout">Logout</string>
    <string name="drafts">Drafts</string>
    <string name="title_activity_new_post">New Post</string>

    <string name="news_feed_title">News Feed</string>
    <string name="drafts_title">Drafts</string>
    <string name="unnamed">Unnamed User</string>
    <string name="clear_drafts">Clear</string>
    <string name="feed_refresh">Refresh</string>

    <string name="draft_btn_edit">Edit</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="title_activity_drafts">DraftsActivity</string>
</resources>
