<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:paddingTop="10dp"
    tools:context="me.nandunb.newsreporter.activities.SignUpActivity"
    android:id="@+id/relativeLayout">

    <EditText
        android:id="@+id/user_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/user_signup_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/display_name_hint"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_signup_email" />

    <EditText
        android:id="@+id/user_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/user_signup_display_name"
        app:layout_constraintTop_toBottomOf="@+id/user_signup_display_name" />

    <Button
        android:id="@+id/btn-signup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:onClick="signUp"
        android:text="@string/signup_button"
        app:layout_constraintStart_toStartOf="@+id/user_signup_password"
        app:layout_constraintTop_toBottomOf="@+id/user_signup_password"
        app:layout_constraintEnd_toEndOf="@+id/user_signup_password" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="187dp"
        android:text="@string/app_title"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="176dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@+id/user_signup_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="21dp"
        android:text="@string/sigin_required_string"
        app:layout_constraintTop_toBottomOf="@+id/btn-signup"
        app:layout_constraintEnd_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/linkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_button"
        android:textStyle="bold"
        android:onClick="goToLogin"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        android:layout_marginStart="7dp"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>
